"右クリック押しながら" から "右ボタン押しながら" に表記を変更
日本語がおかしかった

--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -66,9 +66,9 @@
                                     <Label Width="50">ホールド</Label>
                                     <ComboBox x:Name="MouseInputHold" Width="130" Height="20" SelectionChanged="MouseInputHold_SelectionChanged">
                                         <ComboBoxItem Tag="None">なし</ComboBoxItem>
-                                        <ComboBoxItem Tag="L_Click">左クリック押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="R_Click">右クリック押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="M_Click">中クリック押しながら</ComboBoxItem>
+                                        <ComboBoxItem Tag="L_Button">左ボタン押しながら</ComboBoxItem>
+                                        <ComboBoxItem Tag="R_Button">右ボタン押しながら</ComboBoxItem>
+                                        <ComboBoxItem Tag="M_Button">中ボタン押しながら</ComboBoxItem>
                                         <ComboBoxItem Tag="Shift">Shiftキー押しながら</ComboBoxItem>
                                         <ComboBoxItem Tag="Ctrl">Ctrlキー押しながら</ComboBoxItem>
                                         <ComboBoxItem Tag="Alt">Altキー押しながら</ComboBoxItem>
