マウス入力の「ホールド」+クリックをマウスジェスチャに統合
MouseGestureL.ahkと競合してしまうため（除外設定をしても）
MouseGestureLで登録してある始動ボタンが絡むと、クリックイベントを拾えなくなることがある
クリックイベントを、マウスジェスチャクラス内のグローバルフックで掴むことで解決
「進むボタン」と「戻るボタン」の組み合わせの挙動はおかしいまま（ハードの仕様かも）

--- a/C-SlideShow/CommonControl/MouseGestureControl.xaml
+++ b/C-SlideShow/CommonControl/MouseGestureControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:C_SlideShow.CommonControl"
              mc:Ignorable="d" 
-             d:DesignHeight="24" d:DesignWidth="120">
+             d:DesignHeight="38" d:DesignWidth="120">
     <Grid>
         <Border Name="MainBorder"
                 Cursor="IBeam"
@@ -17,7 +17,7 @@
                 Background="White"
                 BorderThickness="1"
                 BorderBrush="Gray">
-            <TextBlock Name="StrokeText" HorizontalAlignment="Center"></TextBlock>
+            <TextBlock Name="StrokeText" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         </Border>
             
     </Grid>
