--- a/C-SlideShow/AppSettingDialog.xaml
+++ b/C-SlideShow/AppSettingDialog.xaml
@@ -60,24 +60,10 @@
                             </GroupBox>
                             <Button x:Name="AllDefault_Shortcut" Click="AllDefault_Shortcut_Click" Margin="4" Width="100" HorizontalAlignment="Left">すべてデフォルト</Button>
                         </StackPanel>
-                        <GroupBox  Header="マウス入力" Height="128" Width="200" Margin="4,4,4,4" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+                        <GroupBox  Header="マウス入力" Height="100" Width="200" Margin="4,4,4,32" VerticalAlignment="Bottom" HorizontalAlignment="Left">
                             <StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="2">
-                                    <Label Width="50">ホールド</Label>
-                                    <ComboBox x:Name="MouseInputHold" Width="130" Height="20" SelectionChanged="MouseInputHold_SelectionChanged">
-                                        <ComboBoxItem Tag="None">なし</ComboBoxItem>
-                                        <ComboBoxItem Tag="L_Button">左ボタン押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="R_Button">右ボタン押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="M_Button">中ボタン押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="X1_Button">戻るボタン押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="X2_Button">進むボタン押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="Shift">Shiftキー押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="Ctrl">Ctrlキー押しながら</ComboBoxItem>
-                                        <ComboBoxItem Tag="Alt">Altキー押しながら</ComboBoxItem>
-                                    </ComboBox>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" Margin="2">
-                                    <Label Width="50">入力</Label>
+                                    <Label Width="50">ボタン</Label>
                                     <ComboBox x:Name="MouseInputButton" Width="130" Height="20" SelectionChanged="MouseInputButton_SelectionChanged">
                                         <ComboBoxItem>なし</ComboBoxItem>
                                         <ComboBoxItem>左クリック</ComboBoxItem>
@@ -85,28 +71,45 @@
                                         <ComboBoxItem>中クリック</ComboBoxItem>
                                         <ComboBoxItem>ホイールアップ</ComboBoxItem>
                                         <ComboBoxItem>ホイールダウン</ComboBoxItem>
-                                        <ComboBoxItem>戻るボタンクリック</ComboBoxItem>
-                                        <ComboBoxItem>進むボタンクリック</ComboBoxItem>
+                                        <ComboBoxItem>戻るボタン</ComboBoxItem>
+                                        <ComboBoxItem>進むボタン</ComboBoxItem>
                                         <ComboBoxItem>左ダブルクリック</ComboBoxItem>
                                         <ComboBoxItem>右ダブルクリック</ComboBoxItem>
                                     </ComboBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="3" HorizontalAlignment="Right">
+                                    <CheckBox x:Name="MouseInputModifire_Shift" Click="MouseInputModifire_Click" Width="54">Shift</CheckBox>
+                                    <CheckBox x:Name="MouseInputModifire_Ctrl"  Click="MouseInputModifire_Click" Width="54">Ctrl</CheckBox>
+                                    <CheckBox x:Name="MouseInputModifire_Alt"   Click="MouseInputModifire_Click" Width="40">Alt</CheckBox>
                                 </StackPanel>
                                 <Button x:Name="MouseInputMapClearButton" Click="MouseInputMapClearButton_Click" Width="40" Margin="4" HorizontalAlignment="Right">クリア</Button>
                             </StackPanel>
                         </GroupBox>
                         <GroupBox  Header="マウスジェスチャ" Height="128" Width="200" Margin="4" VerticalAlignment="Bottom" HorizontalAlignment="Left">
                             <StackPanel>
-                                <cc:MouseGestureControl x:Name="MouseGestureControl" Height="20" GestureAssigned="MouseGestureControl_GestureAssigned" Margin="4"></cc:MouseGestureControl>
-                                <StackPanel Orientation="Horizontal">
-                                    <Label Width="70">始動ボタン</Label>
-                                    <ComboBox x:Name="MauseGestureStartingButton" SelectionChanged="MauseGestureStartingButton_SelectionChanged" Width="113" Height="20">
-                                        <ComboBoxItem Tag="R_Button">右ボタン (R)</ComboBoxItem>
-                                        <ComboBoxItem Tag="M_Button">中ボタン (M)</ComboBoxItem>
-                                        <ComboBoxItem Tag="X1_Button">戻るボタン (X1)</ComboBoxItem>
-                                        <ComboBoxItem Tag="X2_Button">進むボタン (X2)</ComboBoxItem>
-                                    </ComboBox>
+                                <cc:MouseGestureControl x:Name="MouseGestureControl" AllowLButtonDrag="False"
+                                                        Height="40" GestureAssigned="MouseGestureControl_GestureAssigned" 
+                                                        MainBorderLostFocus="MouseGestureControl_MainBorderLostFocus" Margin="4"></cc:MouseGestureControl>
+                                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                                    <Button x:Name="MouseGestureHelpButton" Click="MouseGestureHelpButton_Click" ContextMenuService.IsEnabled="False" Width="30" Margin="4" HorizontalAlignment="Right" Content="？">
+                                        <Button.ContextMenu>
+                                            <ContextMenu>
+                                                <MenuItem Header="←" InputGestureText="左方向にドラッグ"></MenuItem>
+                                                <MenuItem Header="↑" InputGestureText="上方向にドラッグ"></MenuItem>
+                                                <MenuItem Header="→" InputGestureText="右方向にドラッグ"></MenuItem>
+                                                <MenuItem Header="↓" InputGestureText="下方向にドラッグ"></MenuItem>
+                                                <MenuItem Header="[L]" InputGestureText="左クリック"></MenuItem>
+                                                <MenuItem Header="[R]" InputGestureText="右クリック"></MenuItem>
+                                                <MenuItem Header="[M]" InputGestureText="中クリック"></MenuItem>
+                                                <MenuItem Header="[X1]" InputGestureText="戻るボタン"></MenuItem>
+                                                <MenuItem Header="[X2]" InputGestureText="進むボタン"></MenuItem>
+                                                <MenuItem Header="[WU]" InputGestureText="マウスホイール アップ"></MenuItem>
+                                                <MenuItem Header="[WD]" InputGestureText="マウスホイール ダウン"></MenuItem>
+                                            </ContextMenu>
+                                        </Button.ContextMenu>
+                                    </Button>
+                                    <Button x:Name="MouseGestureClearButton" Click="MouseGestureClearButton_Click" Width="38" Margin="4" HorizontalAlignment="Right">クリア</Button>
                                 </StackPanel>
-                                <Button x:Name="MouseGestureClearButton" Click="MouseGestureClearButton_Click" Width="40" Margin="4" HorizontalAlignment="Right">クリア</Button>
                                 <StackPanel Orientation="Horizontal">
                                     <Label Width="70">判定距離</Label>
                                     <cc:NumericUpDown x:Name="MouseGestureRange" ValueChanged="MouseGestureRange_ValueChanged" Width="60" MaxValue="9999" MinValue="1"></cc:NumericUpDown>
